fix paths for github pages

--- a/signUp.html
+++ b/signUp.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Login Page</title>
-  <link rel="stylesheet" href="../style/signUp.css">
+  <link rel="stylesheet" href="./style/signUp.css">
 </head>
 <body>
 
@@ -32,6 +32,6 @@
 
   
     
-    <script src="../js/signUp.js"></script>
+    <script src="./js/signUp.js"></script>
 </body>
 </html>
