--- a/userbasket.html
+++ b/userbasket.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style/userbasket.css">
+    <link rel="stylesheet" href="./style/userbasket.css">
 </head>
 <body>
     
@@ -112,7 +112,7 @@
       <!-- empty shop -->
       <div class="empty-cart" id="empty-cart">
         <p>Your cart is empty.</p>
-        <span><img src="../image/empty-cart.svg" alt=""></span>
+        <span><img src="./image/empty-cart.svg" alt=""></span>
       </div>
       <!-- محصولات توسط JS اضافه می شوند -->
       <article class="cart-container"></article>
@@ -174,8 +174,8 @@
       </div>
      </footer>
 
-     <script type="module" src="/js/gradient2.js"></script>
-     <script type="module" src="/js/navbar.js"></script>
-     <script type="module" src="/js/userbasket.js"></script>
+     <script type="module" src="./js/gradient2.js"></script>
+     <script type="module" src="./js/navbar.js"></script>
+     <script type="module" src="./js/userbasket.js"></script>
 </body>
 </html>
