--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="../style/login.css">
+  <link rel="stylesheet" href="./style/login.css">
 </head>
 <body>
 
@@ -43,6 +43,6 @@
     </form>
   </div>
   
-  <script src="../js/login.js"></script>
+  <script src="./js/login.js"></script>
 </body>
 </html>
